[package]
name = "ANVIL"
version = "0.1.0"
authors = ["Marcus Allen Denslow <marcus.allen.denslow@gmail.com>"]
edition = "2024"

# the profile used for 'cargo build'
[profile.dev]
panic = "abort" # disable stack unwinding on panic

#  he profile used for 'cargo build --release'
[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bin]]
name = "ANVIL"
test = false
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
