[package]
name = "ANVIL"
version = "0.1.0"
authors = ["Marcus Allen Denslow <marcus.allen.denslow@gmail.com>"]
edition = "2024"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300 # in seconds

# the profile used for 'cargo build'
[profile.dev]

#  he profile used for 'cargo build --release'
[profile.release]

[[bin]]
name = "ANVIL"
test = true
bench = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
